# sandbox

./: .gitignore  installsoftware.sh  manage.sh  searchline.sh
dbutil/: connect_db.pl  connect_db.py  query_mysqldb.py  query_pgdb.py  scandb.js
dbutil/mongo/: mongoparse.py  qmongodb.js  qmongodb.py  qmongoose.js
jest/: browser.js  browser.test.js  package.json  pwbrowser.js
ted/python/: qasyncrequests.py  qpwtest.py
templates/: apimethods.js  apimethods.pl  apimethods.py  get_body_browser.js  get_body_browser.py  gjson.js  gjson.test.js  template.pl  template.py
templates/cpp/listfiles/: CMakeLists.txt  main.cpp
templates/cpp/zcurl/: CMakeLists.txt  main.cpp
templates/dart/: searchfiles.dart
templates/julia/: getrequest.jl  parsexml.jl  plotter.jl  qdb.jl  qmongo.jl  qscrape.jl  searchstring.jl
templates/kotlin/: getfilelist.kts
templates/nodejs/: covidtracker.js  gethtml.js  getlinks.js  getmongo.js  getpitchers.js  getplayers.js  parsexml.js  parsexmlsync.js  querydb.js  scrape.js  searchtext.js  sgoogle.js  walk.js
templates/perl_scripts/: DBtest.pl  copytorepo.pl  dos2unix.pl  fixmultiline.pl  list_files.pl  parsehtml.pl  parsehtmlsimple.pl  parsetxlf.pl  qksearch.pl  qsearch.pl  renamemp4.pl  replicate.pl  searchstring.pl  simpleget.pl  unarchive.pl
templates/prompts/: read_codebase.md
webapp/: app.js  app.py  index.html  itunes.js  myscript.js  node_scrape.js
webpage/: checktype.html  fairyfloss.html  index.html  kindaichi.html  kosukue.html  latexref.html  poirot.html  ramune.html  sakura.html
website/: index_dev.html
(+142 files in other folders)
